test/com/facebook/buck/cli/testdata/buck_events/compiler_error/BUCK.fixture
java_test(
    name = "broken",
    srcs = [
        "Broken.java",
    ],
    labels = ["flaky"],
)
